# ResearchPaperAnalysis

Backend/: .gitignore  auth.py  chatbot.py  db.py  errors.py  main.py  models.py  paper_check.py  pyproject.toml  routes.py
Backend/routes/: chat_routes.py
research-assistant-frontend/: package-lock.json  package.json
research-assistant-frontend/src/: App.css  App.js
research-assistant-frontend/src/components/: ChatPage.js  LoginPage.js  SignupPage.js
research-assistant-frontend/src/services/: api.js
